test/libsolidity/syntaxTests/storageLayoutSpecifier/contract_named_layout.sol
contract layout layout at 0x1234ABC { }
// ----
// UnimplementedFeatureError 1834: (0-39): Code generation is not supported for contracts with specified storage layout base.
